04/01/2023 (03:48 PM)

>   Products added to cart after checking for size. If size and productId both doesnot exist-
    togethor, create a new object with same productId and New size and insert into products array.

>   User can add product to cart from View Product Details page.

--------------------------------------------------------------------------------------------------

04/01/2023 (04:39 PM)

>   An error in user helpers rectified.

>   Changed the POST request from the Product Details page from "Form" to AJAX.

--------------------------------------------------------------------------------------------------

04/01/2023 (09:28 PM)

>   Cart products and Total price displayed in the cart page.

--------------------------------------------------------------------------------------------------

04/01/2023 (10:30 PM)

>   Product-Size name changed from database default name to readable name.

--------------------------------------------------------------------------------------------------

05/01/2023 (12:50 PM)

>   Fixed an error in user-helpers where i forgot to add product size as a parameter which need
    to be checked before updating count.

>   When user add a product to cart, a new key:value pair is created for date. This is included -
    so that if user need to change quantity of a product, A unique Id could be assigned to it, -
    as unlike the shopping cart project where products were unisize, and product Id could be used-
    as the Id, here, there can be different products which differ in size having same product Id.

--------------------------------------------------------------------------------------------------
