@@ -9,7 +9,7 @@
                 <li><a style="font-size: 14px; font-weight: 500;" href="/women">WOMEN</a></li>
                 <li><a style="font-size: 14px; font-weight: 500;" href="/living">LIVING</a></li>
                 <li><a style="font-size: 14px; font-weight: 500;" href="/order-history">Order History</a></li>
-                <li><a style="font-size: 14px; font-weight: 500;" href="/logout">Log Out</a></li>
+                <li><button style="font-size: 14px; font-weight: 500; border: none; background: #d7d4f3;" onclick="doLogOut()">Log Out</button></li>
                 <li><a style="font-size: 14px;" href="/wishlist">
                     <div style="flex-direction: column;" class="d-flex align-items-center">
                         <span class="badge bg-danger wishlist-notification-badge" id="wishlistCountBadge">{{wishlistCount}}</span>
@@ -17,7 +17,7 @@
                         <span style="font-size: 13px; font-weight: 500;">Wishlist</span>
                     </div></i></a>
                 </li>
-                <li><a style="font-size: 14px;" href="/user-profile">
+                <li style=" padding-top: 16px;"><a style="font-size: 14px;" href="/user-profile">
                     <div style="flex-direction: column;" class="d-flex align-items-center">
                         <i class="fa-solid fa-user"></i>
                         <span style="font-size: 13px; font-weight: 500;">Profile</span>
